Update and rename feature_request.yml to submission.yml

--- a/.github/ISSUE_TEMPLATE/submission.yml
+++ b/.github/ISSUE_TEMPLATE/submission.yml
@@ -1,4 +1,4 @@
-name: 🚀 Feature request
+name: 🚀 Submission
 description: Suggest an idea for Memphis 💡
 title: "Feature: "
 labels: [💟 Community involvement,Feature Request]
