--- a/.github/ISSUE_TEMPLATE/submission.yml
+++ b/.github/ISSUE_TEMPLATE/submission.yml
@@ -44,6 +44,7 @@ body:
     id: source-link
     attributes:
       label: Source code link
+      description: Put a link to your publicly-available source code repo.
     validations:
       required: false
   - type: textarea
@@ -70,4 +71,4 @@ body:
   - type: markdown
     attributes:
       value: |
-        To keep your sensitive data private please head to this [Google form](https://docs.google.com/forms/d/e/1FAIpQLSecz9jV_bhVaC4zodhbD7QFqQYo_V9B8w9skJlLHOhI6WrWlw/viewform) to complete the submission.
+        **To keep your sensitive data private, please head to this [Google form](https://docs.google.com/forms/d/e/1FAIpQLSecz9jV_bhVaC4zodhbD7QFqQYo_V9B8w9skJlLHOhI6WrWlw/viewform) to complete the submission.**
