--- a/.github/ISSUE_TEMPLATE/submission.yml
+++ b/.github/ISSUE_TEMPLATE/submission.yml
@@ -72,7 +72,8 @@ body:
     id: google-form
     attributes:
       label: "Confirm submission of private form"
-      description: **To keep your sensitive data private, please fill out this [Google form](https://docs.google.com/forms/d/e/1FAIpQLSecz9jV_bhVaC4zodhbD7QFqQYo_V9B8w9skJlLHOhI6WrWlw/viewform) to complete the submission.**
+      description: |
+        **To keep your sensitive data private, please fill out this [Google form](https://docs.google.com/forms/d/e/1FAIpQLSecz9jV_bhVaC4zodhbD7QFqQYo_V9B8w9skJlLHOhI6WrWlw/viewform) to complete the submission.**
       options:
         - label: Completed
     validations:
