--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,2 +1,16 @@
 [tool.isort]
 profile = "hug"
+
+[tool.sqlfluff.core]
+dialect = "postgres"
+templater = "jinja"
+sql_file_exts = ".sql,.sql.j2,.dml,.ddl"
+max_line_length = 120
+ignore = "parsing"
+
+
+[tool.sqlfluff.templater.jinja]
+apply_dbt_builtins = true
+
+[tool.sqlfluff.rules.capitalisation.keywords]
+capitalisation_policy = "lower"
