--- a/requirements.txt
+++ b/requirements.txt
@@ -28,7 +28,7 @@ pandas==2.0.3
 pyarrow==12.0.1
 ipykernel
 plotly
-nbformat
+# nbformat
 gensim
 scikit-learn
 seaborn
@@ -37,7 +37,6 @@ statsmodels
 supabase
 psycopg2-binary
 # psycopg2
-dbt-postgres
 streamlit
 
 # Current package
